# ComfortClasses

./: .gitignore  CMakeLists.txt  ComfortClasses.doxyfile  LICENSE  README.md
demo/: CCStringDemo.cpp
src/: CCDecimal.cpp  CCDecimal.h  CCDecimal.hpp  CCString.cpp  CCString.h  CMakeLists.txt  ComfortClasses.cpp  Decimal.cpp
test/: CCDecimalTest.cpp  CCStringTest.cpp
